# NovelVizAI-Frontend

./: API_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  launch.py  main.py  pyproject.toml  requirements.txt
app/: client.py  config.py
app/api/: core.py
app/components/: __init__.py  nlp_utils.py
app/utils/: css_engine.py
