[project]
name = "novelvizai-frontend"
version = "0.1.0"
description = "Novel Companion AI - An intelligent reading assistant powered by advanced NLP and Large Language Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "networkx>=3.1",
    "nltk>=3.8.1",
    "scikit-learn>=1.3.0",
]
